# xpf

./: CLAUDE.md  Makefile  README.md  _Log.md  go.mod
userspace-dp/: Cargo.toml  README.md
userspace-dp/csrc/: xsk_bridge.c
userspace-dp/src/: FEATURES.md  fairness.rs  main.rs  main_tests.rs  nat.rs  nat_tests.rs  policy.rs  policy_tests.rs  protocol.rs  screen.rs  screen_tests.rs  xsk_ffi.rs
userspace-dp/src/afxdp/: README.md  bind.rs  disposition.rs  event_emit.rs  flow_cache.rs  flow_cache_tests.rs  forward_request.rs  forwarding_build.rs  forwarding_build_tests.rs  icmp.rs  mirror.rs  mod.rs  mpsc_inbox.rs  neighbor_dispatch.rs  poll_descriptor.rs  poll_stages.rs  session_delta.rs  sharded_neighbor.rs  shared_umem.rs  test_fixtures.rs  tests.rs  tunnel.rs  worker_runtime.rs  worker_runtime_tests.rs
userspace-dp/src/afxdp/coordinator/: README.md  cos_state.rs  inject.rs  mod.rs  status.rs  supervisor.rs  tests.rs  worker_manager.rs
userspace-dp/src/afxdp/cos/: README.md  admission.rs  admission_tests.rs  (+13 more)
userspace-dp/src/event_stream/: README.md  codec.rs  codec_tests.rs  mod.rs  producer.rs  producer_tests.rs  tests.rs
userspace-dp/src/fairness_eval/: README.md  args.rs  inputs.rs  mod.rs  per_worker.rs  report.rs  rss.rs  verdict.rs  windowing.rs
userspace-dp/src/filter/: README.md  compiler.rs  engine.rs  mod.rs  policer.rs  tests.rs
userspace-dp/src/server/: README.md  handlers.rs  helpers.rs  lifecycle.rs
userspace-dp/src/session/: README.md  mod.rs
userspace-dp/tests/: cos_doc_drift.rs  fairness_eval_blackbox.rs  snat_contract_doc_guard.rs
(+463 files in other folders)
