[package]
name = "xpf-userspace-dp"
version = "0.1.0"
edition = "2024"

[features]
default = []
debug-log = []

[dependencies]
arc-swap = "1.7"
chrono = { version = "0.4", features = ["serde", "clock"] }
ctrlc = "3.5"
io-uring = "0.7"
ipnet = "2.10"
libbpf-sys = "1.6"
libc = "0.2"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
rustc-hash = "2.1"
slab = "0.4"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

# #825: microbench for the TX kick-latency instrumentation. Gated on
# p99 per-call overhead ≤ 60 ns per plan §7 / §3.10 R1.
[[bench]]
name = "tx_kick_latency"
harness = false

# #923: config-commit latency gate for the worst-case prefix trie
# build (256 random /32 prefixes → ~8K Box<TrieNode> allocations).
# Gated on p95 ≤ 1.5 ms (catches a 10× regression from the current
# ~150 µs working point; tightened twice from the plan's initial
# 10 ms target, see bench file header).
[[bench]]
name = "prefix_set_lookup"
harness = false

# #964 Step 1: structural microbenchmark for the SessionTable
# slab + integer-handle refactor. Reimplements the hot-path data
# shapes in this bin crate (SessionTable is pub(crate); see
# tx_kick_latency bench for the same pattern) to compare today's
# FxHashMap-of-keys layout against the slab + Key→u32 layout.
[[bench]]
name = "session_table"
harness = false
